Fix  horizontal scrolling.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,11 +65,6 @@ h1 .small-subtitle {
     top: 100%;
 }
 
-.container-fluid {
-    margin: 0;
-    padding: 0;
-}
-
 .nospacing {
     margin: 0 !important;
     padding: 0 !important;
